# open-webui

./: .env.example  .gitignore  LICENSE  README.md  Taskfile.yaml  devbox.json  pyproject.toml
.github/: lint.yml  renovate.json
.github/workflows/: ci.yml  lint.yml  test.yml
open_webui-tools/: paperless.py
open_webui_tools/: paperless.py  youtubetranscript.py
prompts/: prompts.json
tests/: test_paperless.py  test_youtubetranscript.py
tools/: paperless.py
